--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
 
     {% endif %} -->
 
-    <h3>The patient has  {{prediction}} </h3>
+    <h3>The patient is {{prediction}} </h3>
 
 </body>
 </html>
